@@ -1,17 +1,25 @@
 package com.sqli.matchmaking.service.teammaking.forms;
 
-import java.util.List;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
+import java.util.*;
 import java.util.stream.Collectors;
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.stream.IntStream;
 
 import com.sqli.matchmaking.model.composite.Team;
+import com.sqli.matchmaking.model.composite.TeamUser;
 import com.sqli.matchmaking.model.standalone.User;
+import com.sqli.matchmaking.service.composite.TeamService;
 import com.sqli.matchmaking.service.teammaking.TeamMaking;
 
 import lombok.Getter;
 
+@Service
 public class EvenMaking implements TeamMaking {
+
+    @Autowired
+    private TeamService teamService;
 
     public void make(List<User> players, List<Team> teams) {
 
@@ -19,9 +27,37 @@ public class EvenMaking implements TeamMaking {
         List<Double> ranks = players.stream().map(User::getRank).collect(Collectors.toList());
         // Calculate the number of teams
         int noTeams = teams.size();
-        // Calculate the number of players per team
-        int playersPerTeam = players.size() / noTeams;
-        // get noTeams subList, such that the average of rank of all sublist are approximetively close
+        // Find the best partition
+        EvenPartition bestPartition = new EvenPartition(ranks, noTeams);
+        List<List<Double>> ret = bestPartition.getResult();
+
+        // Copy players 
+        List<User> playersClone = new ArrayList<>(players);
+
+        assert ret.size() == noTeams : "WEIRD : bestPartition is not of size teams";
+        for (int i = 0; i < noTeams; i++) {
+            for (Double rank : ret.get(i)) {
+                User player = findPlayerByRank(rank, playersClone);
+                // Add player to team
+                TeamUser el = TeamUser.builder()
+                        .user(player).team(teams.get(i))
+                        .build();
+                teamService.save(el);
+            }
+        }
+        
+    }
+
+    private User findPlayerByRank(Double rank, List<User> players) {
+        for (User player : players) {
+            if (player.getRank().equals(rank)) {
+                // Remove player 
+                players.remove(player);
+                return player;
+            }
+        }
+        System.out.println("hj_n\n\n\nhjhjk");
+        return null;
     }
 }
 
@@ -29,106 +65,130 @@ public class EvenMaking implements TeamMaking {
 class EvenPartition {
 
     private List<List<Double>> result;
+    private final List<Double> list;
 
     public EvenPartition(List<Double> list, int n) {
-        this.result = null;
-        double minDifference = Double.MAX_VALUE;
+        this.list = list;
 
+        List<List<Integer>> bestPartition = new ArrayList<>();
+        double minDifference = Double.MAX_VALUE;
         // Generate all possible partitions
-        GeneratePartitions allPartitions = new GeneratePartitions(list, n);
-        for (List<List<Double>> partition : allPartitions.getResult()) {
+        List<Integer> indices = IntStream.range(0, list.size())
+                                         .boxed()
+                                         .collect(Collectors.toList());
+        PartitionGenerator allPartitions = new PartitionGenerator(indices, n);
+        for (List<List<Integer>> partition : allPartitions.getResult()) {
             double currentDifference = calculateSumOfDifferences(partition);
             if (currentDifference < minDifference) {
                 minDifference = currentDifference;
-                this.result = partition;
+                bestPartition = partition;
             }
         }
+
+        this.result = bestPartition.stream()
+                    .map(p -> p.stream()
+                        .map(el -> this.list.get(el)).collect(Collectors.toList()))
+                    .collect(Collectors.toList());
     }
 
-    private double calculateSumOfDifferences(List<List<Double>> partition) {
+    private double calculateSumOfDifferences(List<List<Integer>> partition) {
         double sum = 0.0;
         for (int i = 0; i < partition.size(); i++) {
             for (int j = i + 1; j < partition.size(); j++) {
                 double avg1 = partition.get(i).stream()
+                    .map(el -> this.list.get(el))
                     .mapToDouble(Double::doubleValue).average().orElse(0);
                 double avg2 = partition.get(j).stream()
+                    .map(el -> this.list.get(el))
                     .mapToDouble(Double::doubleValue).average().orElse(0);
                 sum += Math.abs(avg1 - avg2);
             }
         }
         return sum;
-    }
+    } 
+
 
 }
 
-
 @Getter
-class GeneratePartitions {
+class PartitionGenerator {
 
-    private final int n;
-    private final List<Double> list;
-    private List<List<List<Double>>> result;
+    private List<List<List<Integer>>> result;
+    private final int partitionSize;
 
-    public GeneratePartitions(List<Double> list, int n) {
-        this.list = list;
-        this.n = n;
-        ////this.result = new ArrayList<>();
-        int partitionSize = list.size() / n;
-        this.result = partitionHelper(list, n, partitionSize, 0);
+    public PartitionGenerator(List<Integer> L, int m) {
+        int n = L.size();
+        if (n % m != 0) {
+            throw new IllegalArgumentException("'m' must divide 'n' evenly");
+        }
+        this.partitionSize = n / m;
+        this.result = generateSubPartitions(new ArrayList<>(), new ArrayList<>(L));
     }
 
-    private List<List<List<Double>>> partitionHelper(List<Double> list, int n, int size, int start) {
-        List<List<List<Double>>> result = new ArrayList<>();
-
-        if (n == 1) {
-            List<List<Double>> singlePartition = new ArrayList<>();
-            singlePartition.add(new ArrayList<>(list.subList(start, list.size())));
-            result.add(singlePartition);
+    private List<List<List<Integer>>> generateSubPartitions(List<List<Integer>> sublist, List<Integer> remaining) {
+        if (remaining.isEmpty()) {
+            List<List<List<Integer>>> result = new ArrayList<>();
+            result.add(new ArrayList<>(sublist));
             return result;
         }
 
-        for (int i = start; i <= list.size() - size * n; i += size) {
-            List<Double> firstPart = list.subList(i, i + size);
-            List<List<List<Double>>> subPartitions = partitionHelper(list, n - 1, size, i + size);
+        List<List<List<Integer>>> partitions = new ArrayList<>();
+        for (List<Integer> combo : generateCombinations(remaining, this.partitionSize)) {
+            List<List<Integer>> newSublist = new ArrayList<>(sublist);
+            newSublist.add(combo);
 
-            for (List<List<Double>> subPartition : subPartitions) {
-                List<List<Double>> newPartition = new ArrayList<>();
-                newPartition.add(firstPart);
-                newPartition.addAll(subPartition);
-                result.add(newPartition);
-            }
+            List<Integer> newRemaining = new ArrayList<>(remaining);
+            newRemaining.removeAll(combo);
+
+            partitions.addAll(generateSubPartitions(newSublist, newRemaining));
         }
 
-        return result;
+        return partitions;
     }
 
-    public void debugg() {
-        for (List<List<Double>> poss : this.result) {
-            for (List<Double> partition : poss) {
-                System.out.println(partition);
-            }
-            System.out.println("----\n");
+    private List<List<Integer>> generateCombinations(List<Integer> set, int n) {
+        if (n == 0) {
+            List<List<Integer>> result = new ArrayList<>();
+            result.add(new ArrayList<>());
+            return result;
         }
+
+        if (set.isEmpty()) {
+            return new ArrayList<>();
+        }
+
+        List<Integer> list = new ArrayList<>(set);
+        Integer head = list.get(0);
+        List<Integer> rest = new ArrayList<>(list.subList(1, list.size()));
+
+        List<List<Integer>> combs = new ArrayList<>();
+        for (List<Integer> comb : generateCombinations(rest, n - 1)) {
+            List<Integer> newComb = new ArrayList<>(comb);
+            newComb.add(head);
+            combs.add(newComb);
+        }
+        combs.addAll(generateCombinations(rest, n));
+
+        return combs;
     }
+
 }
+
 
 class Test {
 
     public static void main(String[] args) {
-        // Example list of Double values
-        List<Double> list = Arrays.asList(10.0, 20.0, 30.0, 40.0, 50.0, 60.0, 70.0, 80.0, 90.0);
-        // Number of partitions
-        int n = 3;
-        GeneratePartitions g = new GeneratePartitions(list, n);
-        g.debugg();
-        // Create an instance of EvenPartition
-        EvenPartition evenPartition = new EvenPartition(list, n);
-        // Retrieve and print the result
-        List<List<Double>> partitionResult = evenPartition.getResult();
-        System.out.println("Optimal partitions with minimal sum of differences between averages:");
-        for (List<Double> partition : partitionResult) {
-            //System.out.println(partition);
+        List<Double> L = List.of(1., 2., 0., 1.);
+        int m = 2;
+        try {
+            EvenPartition uniquePartitions = new EvenPartition(L, m);
+            List<List<Double>> ret = uniquePartitions.getResult();
+            System.out.println("Nombre de partitions uniques : " + ret.size());
+            ret.forEach(partition -> System.out.println(partition));
+        } catch (IllegalArgumentException e) {
+            System.err.println(e.getMessage());
         }
     }
 }
+
 
